--- a/WeatherWeb/Pages/Index.cshtml
+++ b/WeatherWeb/Pages/Index.cshtml
@@ -1,16 +1,14 @@
-﻿
-
-@page
+﻿@page
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 @{
-    
+
     @using Newtonsoft.Json
     @using Newtonsoft.Json.Linq;
-    
+
 
 
     string url = $"https://api.openweathermap.org/data/2.5/weather?q=Bydgoszcz,pl&APPID=616b3c6623805f4fd2ef1379813f5678";
@@ -33,7 +31,14 @@
             {
                 jsonResponse = await response.Content.ReadAsStringAsync();
 
+                var jsonObject = JObject.Parse(jsonResponse);
 
+                var main = jsonObject["main"];
+                temperature = System.Math.Round(main["temp"].Value<double>() - 273.15, 2);
+                pressure = main["pressure"].Value<int>();
+
+                var wind = jsonObject["wind"];
+                windSpeed = wind["speed"].Value<double>();
             }
             else
             {
