--- a/WeatherWeb/Pages/Index.cshtml
+++ b/WeatherWeb/Pages/Index.cshtml
@@ -35,7 +35,7 @@
                 var jsonObject = JObject.Parse(jsonResponse);
 
                 var main = jsonObject["main"];
-                temperature = main["temp"].Value<double>();
+                temperature = System.Math.Round(main["temp"].Value<double>() - 273.15, 2);
                 pressure = main["pressure"].Value<int>();
 
                 var sys = jsonObject["sys"];
